--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer components {
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+    .function-menu {
+        @apply p-2 gap-1 rounded-md bg-gray-400 drop-shadow-md;
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+    .function-button {
+        @apply p-2 rounded-md bg-gray-300 hover:bg-blue-200 active:bg-blue-300 drop-shadow-md transition-colors duration-150 [&[name="delete"]]:bg-red-100 hover:[&[name="delete"]]:bg-red-200 active:[&[name="delete"]]:bg-red-300;
+    }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+}
+canvas[resize] {
+    width: 100%;
+    height: 100%;
 }
